chore: Update and clean up dependencies